--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.10"
 langchain = "^0.1.9"
 langchain-community = "^0.0.24"
 langchain-openai = "^0.0.8"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
