--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ langchain = "^0.1.9"
 langchain-community = "^0.0.24"
 langchain-openai = "^0.0.8"
 python-dotenv = "^1.0.1"
+faiss-cpu = "^1.7.4"
 
 
 [build-system]
