--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ langchain-community = "^0.0.24"
 langchain-openai = "^0.0.8"
 python-dotenv = "^1.0.1"
 faiss-cpu = "^1.7.4"
+streamlit = "^1.31.1"
 
 
 [build-system]
